src/test/ui/reachable/expr_box.stderr
error: unreachable expression
  --> $DIR/expr_box.rs:16:13
   |
16 |     let x = box return; //~ ERROR unreachable
   |             ^^^^^^^^^^
   |
note: lint level defined here
  --> $DIR/expr_box.rs:13:9
   |
13 | #![deny(unreachable_code)]
   |         ^^^^^^^^^^^^^^^^

error: aborting due to previous error

